--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://kotpavlik.github.io/notes_book",
     "name": "notes_front_end",
     "version": "0.1.0",
     "private": true,
