--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "kotpavlik.github.io/notes_book/",
+    "homepage": "https://kotpavlik.github.io/notes_book/",
     "name": "notes_front_end",
     "version": "0.1.0",
     "private": false,
